# SheBuilds-MaSaLa

./: README.md
backend/: .firebaserc
backend/contract/: 4perPpiyH5cs32q9gVx8tokxFDEfEKERH1HxJiShLp8qSvLPS1.export  Cargo.toml  concordium-hackathon.wasm.v1
backend/functions/: config.js  index.js  package-lock.json  permissions.json
frontend/: pubspec.yaml
frontend/lib/: app_router.dart  app_theme.dart  main.dart
frontend/lib/data/local/: preferences.dart
frontend/lib/domain/models/: cart_entry.dart  cart_entry.g.dart  medicine.dart  medicine.g.dart
frontend/lib/domain/repositories/: cart_repository.dart  products_repository.dart  supplier_repository.dart
frontend/lib/presentation/: welcome_screen.dart
frontend/lib/presentation/CartScreen/: cart_card.dart  cart_screen.dart  cart_screen_bloc.dart
frontend/lib/presentation/HomeScreen/: home_screen.dart  home_screen_bloc.dart
frontend/lib/presentation/InfoScreen/: info_screen.dart  info_screen_bloc.dart
frontend/lib/presentation/InfoScreen/bloc/: info_screen_bloc.dart
frontend/lib/presentation/components/: appbar.dart  bottom_navbar.dart  card.dart  horizontal_card_list_with_heading.dart
src/: lib.rs
