# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "concordium_hackathon"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Sahajpreet Singh <sp.code2003@gmail.com>" ]
description = "project for the shebuilds hackathon"

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
